Further work on 10-point

--- a/Week_3_Assignment_RianK.ipynb
+++ b/Week_3_Assignment_RianK.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c0f11ec9-363d-47c5-a845-25d970ae997a",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "aa8ba90e-41f5-4f93-abfe-7ec1e70e4207",
    "metadata": {},
    "outputs": [
@@ -211,13 +211,15 @@
        "(5110, 12)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#1 Shape\n",
+    "#shape = df.shape\n",
+    "#print(shape[0])\n",
     "df.shape"
    ]
   },
@@ -235,78 +237,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "b57aab5c-24b7-4d8f-ab95-e2ddcae05413",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'gender', 'age', 'hypertension', 'heart_disease', 'ever_married',\n",
-       "       'work_type', 'Residence_type', 'avg_glucose_level', 'bmi',\n",
-       "       'smoking_status', 'stroke'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 1: id\n",
+      "Column 2: gender\n",
+      "Column 3: age\n",
+      "Column 4: hypertension\n",
+      "Column 5: heart_disease\n",
+      "Column 6: ever_married\n",
+      "Column 7: work_type\n",
+      "Column 8: Residence_type\n",
+      "Column 9: avg_glucose_level\n",
+      "Column 10: bmi\n",
+      "Column 11: smoking_status\n",
+      "Column 12: stroke\n"
+     ]
     }
    ],
    "source": [
     "#2 Column Names\n",
-    "df.columns"
+    "columns = df.columns\n",
+    "n = 1\n",
+    "for i in columns:\n",
+    "    print(f'Column {n}: {i}')\n",
+    "    n += 1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "298068d2-2b23-40c5-9675-9de20f1f151b",
+   "metadata": {},
+   "source": [
+    "For columns like work and residence type I will need to look at the values to better understand how they have been used. I will also need to research the medical value columns (such as 'bmi' and 'avg_glucose_level') so that I can know what impossible/illogical values look like."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "298068d2-2b23-40c5-9675-9de20f1f151b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "5628ab03-b8e1-42e7-84d6-b12528268200",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "id                     int64\n",
-       "gender                object\n",
-       "age                  float64\n",
-       "hypertension           int64\n",
-       "heart_disease          int64\n",
-       "ever_married          object\n",
-       "work_type             object\n",
-       "Residence_type        object\n",
-       "avg_glucose_level    float64\n",
-       "bmi                  float64\n",
-       "smoking_status        object\n",
-       "stroke                 int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorting Values...\n",
+      "\n",
+      "Numerical Columns:\n",
+      "id: int64\n",
+      "age: float64\n",
+      "hypertension: int64\n",
+      "heart_disease: int64\n",
+      "avg_glucose_level: float64\n",
+      "bmi: float64\n",
+      "stroke: int64\n",
+      "\n",
+      "Categorical Columns:\n",
+      "gender: object\n",
+      "ever_married: object\n",
+      "work_type: object\n",
+      "Residence_type: object\n",
+      "smoking_status: object\n"
+     ]
     }
    ],
    "source": [
-    "#3 Data Types\n",
-    "df.dtypes"
+    "# 3 Data Types\n",
+    "df.dtypes\n",
+    "\n",
+    "numerical_cols = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_cols = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "\n",
+    "print('Sorting Values...\\n')\n",
+    "\n",
+    "print('Numerical Columns:')\n",
+    "for col in numerical_cols:\n",
+    "    print(f\"{col}: {df.dtypes[col]}\")\n",
+    "\n",
+    "print()\n",
+    "print('Categorical Columns:')\n",
+    "for col in categorical_cols:\n",
+    "    print(f\"{col}: {df.dtypes[col]}\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "803a4087-edac-49c9-9f5e-31d5931a2433",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Some of the data types in the numrical section cannot be considered truly numerical. the 'heart_disease' column, while using integers, is actually categorical with 0 meaning they do not have heart disease and 1 meaning they do. As such, going forward I shouldn't rely on the dtypes to determine whether or not they are numerical or categorical."
+   ]
   },
   {
    "cell_type": "code",
@@ -463,12 +489,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "c13c7663-6277-4caf-932d-462b55669e4e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* I was curious what the dataset meant by work and residence type, but now it is a little  more clear what that means. I do wonder why they did not consider sub-urban as a residence type, though perhap they considered it close enough to urban.\n",
+    "* Nothing unexpected or unusual jumps out, except for the potentially missing values which will be discussed next.\n",
+    "* There do seem to be some obvious missing values immediately, with the second line having 'NaN' for bmi. Furthermore, not seen here but in the tail on the next block, there is an 'Unknown' value for smoking, which may be considered a placeholder."
+   ]
   },
   {
    "cell_type": "code",
@@ -625,12 +653,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f552d9c7-8086-4756-8c9f-987b10c063ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* The data seems to have a clean end\n",
+    "* All the rows remain consistent with the beginning"
+   ]
   },
   {
    "cell_type": "code",
@@ -669,11 +698,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "a8a176a5-f783-4287-b4f1-66d65ade2392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total memory usage: 1.62 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total memory usage: {df.memory_usage(deep=True).sum() / (1024 ** 2):.2f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "106bc6c9-4b52-4705-a92b-3bdacc3f6ca4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is a very small data set by data science standards."
+   ]
   },
   {
    "cell_type": "code",
