Further work on 10-point 2/12

--- a/Week_3_Assignment_RianK.ipynb
+++ b/Week_3_Assignment_RianK.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c0f11ec9-363d-47c5-a845-25d970ae997a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "ba4709eb-2fd7-4089-9da5-2efda6da9826",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "23bff057-2988-47e7-b572-680165aba6ee",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "aa8ba90e-41f5-4f93-abfe-7ec1e70e4207",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "(5110, 12)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b57aab5c-24b7-4d8f-ab95-e2ddcae05413",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5628ab03-b8e1-42e7-84d6-b12528268200",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "84dc1a5e-c52e-424c-800a-2d60aa11c634",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "a2ee53cb-cf51-47e3-81ae-975ff3589bfc",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
        "5109       0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "824304c3-0dbe-4d13-aa8e-e6b37a60d83c",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a8a176a5-f783-4287-b4f1-66d65ade2392",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "64c14884-d137-48c8-811f-d43a1567c976",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "9ebf5772-2ea9-4742-9685-914022f40642",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
        "Length: 5110, dtype: bool"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "d0b0930f-d385-48fc-bcee-1ed6034f066a",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
        "max           271.740000    97.600000     1.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "84da3a96-b6f2-4218-a3a1-ca968a128073",
    "metadata": {},
    "outputs": [
@@ -990,7 +990,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,11 +1034,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1ffcba6d-11d5-41f5-acb1-056bf6fefd9b",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age Validation Results:\n",
+      "Ages below 0: 0\n",
+      "Ages above 120: 0\n",
+      "Actual age range: 0.08 to 82.0\n",
+      "Patients under 18: 856\n",
+      "Patients under 1 year old: 43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. How many ages are below 0?\n",
+    "below_zero = (df[\"age\"] < 0).sum()\n",
+    "\n",
+    "# 2. How many ages are above 120?\n",
+    "above_120 = (df[\"age\"] > 120).sum()\n",
+    "\n",
+    "# 3. What is the actual age range?\n",
+    "min_age = df[\"age\"].min()\n",
+    "max_age = df[\"age\"].max()\n",
+    "\n",
+    "# 4. How many patients are under 18?\n",
+    "under_18 = (df[\"age\"] < 18).sum()\n",
+    "\n",
+    "# 5. How many patients are under 1 year old?\n",
+    "under_1 = (df[\"age\"] < 1).sum()\n",
+    "\n",
+    "# --- Print Results ---\n",
+    "print(\"Age Validation Results:\")\n",
+    "print(f\"Ages below 0: {below_zero}\")\n",
+    "print(f\"Ages above 120: {above_120}\")\n",
+    "print(f\"Actual age range: {min_age} to {max_age}\")\n",
+    "print(f\"Patients under 18: {under_18}\")\n",
+    "print(f\"Patients under 1 year old: {under_1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d85dffc6-12f7-47c1-8556-892224ab7475",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary Statistics for BMI:\n",
+      "count    4909.000000\n",
+      "mean       28.893237\n",
+      "std         7.854067\n",
+      "min        10.300000\n",
+      "25%        23.500000\n",
+      "50%        28.100000\n",
+      "75%        33.100000\n",
+      "max        97.600000\n",
+      "Name: bmi, dtype: float64\n",
+      "\n",
+      "\n",
+      "Missing BMI values: 201\n",
+      "\n",
+      "\n",
+      "BMI Value Counts (Top 20 Most Frequent):\n",
+      "bmi\n",
+      "28.7    41\n",
+      "28.4    38\n",
+      "27.7    37\n",
+      "27.6    37\n",
+      "26.7    37\n",
+      "26.1    37\n",
+      "27.3    36\n",
+      "23.4    36\n",
+      "27.0    35\n",
+      "25.1    34\n",
+      "26.4    34\n",
+      "26.9    34\n",
+      "25.5    33\n",
+      "24.8    31\n",
+      "28.9    31\n",
+      "23.5    31\n",
+      "30.3    30\n",
+      "28.3    30\n",
+      "26.5    30\n",
+      "22.2    30\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "BMI values below 10: 0\n",
+      "BMI values above 60: 13\n",
+      "\n",
+      "\n",
+      "Lowest BMI values:\n",
+      "1609    10.3\n",
+      "3307    11.3\n",
+      "2187    11.5\n",
+      "657     12.0\n",
+      "922     12.3\n",
+      "3319    12.8\n",
+      "3968    13.0\n",
+      "3619    13.2\n",
+      "4694    13.3\n",
+      "1701    13.4\n",
+      "Name: bmi, dtype: float64\n",
+      "\n",
+      "\n",
+      "Highest BMI values:\n",
+      "2128    97.6\n",
+      "4209    92.0\n",
+      "928     78.0\n",
+      "544     71.9\n",
+      "1559    66.8\n",
+      "358     64.8\n",
+      "4188    64.4\n",
+      "2764    63.3\n",
+      "3825    61.6\n",
+      "2840    61.2\n",
+      "Name: bmi, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic summary statistics\n",
+    "print(\"Summary Statistics for BMI:\")\n",
+    "print(df[\"bmi\"].describe())\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Count missing values\n",
+    "print(\"Missing BMI values:\", df[\"bmi\"].isna().sum())\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Value counts (sorted)\n",
+    "print(\"BMI Value Counts (Top 20 Most Frequent):\")\n",
+    "print(df[\"bmi\"].value_counts().head(20))\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Check for impossible / unusual values\n",
+    "print(\"BMI values below 10:\", (df[\"bmi\"] < 10).sum())\n",
+    "print(\"BMI values above 60:\", (df[\"bmi\"] > 60).sum())\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Show extreme values\n",
+    "print(\"Lowest BMI values:\")\n",
+    "print(df[\"bmi\"].sort_values().head(10))\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Highest BMI values:\")\n",
+    "print(df[\"bmi\"].sort_values(ascending=False).head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d0620df4-79f2-42fa-8081-bcd15a2027eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoking Status Distribution (Counts and Percentages):\n",
+      "                 Count  Percentage (%)\n",
+      "smoking_status                        \n",
+      "never smoked      1892           37.03\n",
+      "Unknown           1544           30.22\n",
+      "formerly smoked    885           17.32\n",
+      "smokes             789           15.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Smoking Status Distribution (Counts and Percentages):\")\n",
+    "\n",
+    "counts = df[\"smoking_status\"].value_counts(dropna=False)\n",
+    "percentages = df[\"smoking_status\"].value_counts(normalize=True, dropna=False) * 100\n",
+    "\n",
+    "smoking_summary = pd.DataFrame({\n",
+    "    \"Count\": counts,\n",
+    "    \"Percentage (%)\": percentages.round(2)\n",
+    "})\n",
+    "\n",
+    "print(smoking_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "94bda001-90e1-4587-a040-12d27fe48099",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[\"smoking_status\"] = df[\"smoking_status\"].replace(\"Unknown\", pd.NA)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1050,8 +1248,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4b66a1f4-bca0-433d-b088-d7eda3fb2dfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_group\n",
+      "Middle Age (45-64)      1550\n",
+      "Adult (25-44)           1297\n",
+      "Youth (15-24)            537\n",
+      "Old-Old (75-84)          518\n",
+      "Young-Old (65-74)        509\n",
+      "Child (5-14)             444\n",
+      "Infant/Toddler (0-4)     255\n",
+      "Oldest-Old (85+)           0\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define bins and labels\n",
+    "bins = [0, 5, 15, 25, 45, 65, 75, 85, float(\"inf\")]\n",
+    "\n",
+    "labels = [\n",
+    "    \"Infant/Toddler (0-4)\",\n",
+    "    \"Child (5-14)\",\n",
+    "    \"Youth (15-24)\",\n",
+    "    \"Adult (25-44)\",\n",
+    "    \"Middle Age (45-64)\",\n",
+    "    \"Young-Old (65-74)\",\n",
+    "    \"Old-Old (75-84)\",\n",
+    "    \"Oldest-Old (85+)\"\n",
+    "]\n",
+    "\n",
+    "# Create new column\n",
+    "df[\"age_group\"] = pd.cut(\n",
+    "    df[\"age\"],\n",
+    "    bins=bins,\n",
+    "    labels=labels,\n",
+    "    right=False  # includes left value, excludes right (e.g., 5 goes into 5-14)\n",
+    ")\n",
+    "\n",
+    "# Verify results\n",
+    "print(df[\"age_group\"].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "da7b85e7-70ef-41cd-82c8-968e95ad7aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_group\n",
+      "Infant/Toddler (0-4)     255\n",
+      "Child (5-14)             444\n",
+      "Youth (15-24)            537\n",
+      "Adult (25-44)           1297\n",
+      "Middle Age (45-64)      1550\n",
+      "Young-Old (65-74)        509\n",
+      "Old-Old (75-84)          518\n",
+      "Oldest-Old (85+)           0\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the correct order\n",
+    "age_order = [\n",
+    "    \"Infant/Toddler (0-4)\",\n",
+    "    \"Child (5-14)\",\n",
+    "    \"Youth (15-24)\",\n",
+    "    \"Adult (25-44)\",\n",
+    "    \"Middle Age (45-64)\",\n",
+    "    \"Young-Old (65-74)\",\n",
+    "    \"Old-Old (75-84)\",\n",
+    "    \"Oldest-Old (85+)\"\n",
+    "]\n",
+    "\n",
+    "# Convert to ordered categorical\n",
+    "df[\"age_group\"] = pd.Categorical(\n",
+    "    df[\"age_group\"],\n",
+    "    categories=age_order,\n",
+    "    ordered=True\n",
+    ")\n",
+    "\n",
+    "# Verify ordering\n",
+    "print(df[\"age_group\"].value_counts().sort_index())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "13911244-3e87-4e37-b2c4-db3b6ca6759c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of Patients Who Had a Stroke by Age Group:\n",
+      "age_group\n",
+      "Infant/Toddler (0-4)     0.39\n",
+      "Child (5-14)             0.23\n",
+      "Youth (15-24)            0.00\n",
+      "Adult (25-44)            0.62\n",
+      "Middle Age (45-64)       5.16\n",
+      "Young-Old (65-74)       11.20\n",
+      "Old-Old (75-84)         19.69\n",
+      "Oldest-Old (85+)          NaN\n",
+      "Name: stroke, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yogit\\AppData\\Local\\Temp\\ipykernel_16432\\2128300156.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  df.groupby(\"age_group\")[\"stroke\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate stroke rate per age group\n",
+    "stroke_percentage = (\n",
+    "    df.groupby(\"age_group\")[\"stroke\"]\n",
+    "      .mean() * 100\n",
+    ").round(2)\n",
+    "\n",
+    "print(\"Percentage of Patients Who Had a Stroke by Age Group:\")\n",
+    "print(stroke_percentage)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0faddfca-f038-4787-ae4c-e969e994e73c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1105,7 +1443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
